--- a/index.html
+++ b/index.html
@@ -9,68 +9,33 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Using 24/7 Intel.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Using 24/7 Intel" startnode="10" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="ECFD42E2-8A11-4227-81F3-F654D194D6B5" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Briefing" tags="" position="675,200" size="100,100">Briefing:
+<tw-storydata name="Using 24/7 Intel" startnode="17" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="ECFD42E2-8A11-4227-81F3-F654D194D6B5" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name=" PNC Colin Hastings" tags="" position="400,800" size="100,100"># PNC Colin Hastings
 
-HGV theft at Nursling Industrial Estate
+No trace PNC</tw-passagedata><tw-passagedata pid="2" name=" RMS Colin Hastings" tags="" position="400,900" size="100,100"># RMS Colin Hastings
 
-Driver of HGV interrupted theft, was assaulted by thief. Currently in hospital with injuries
+No Trace RMS</tw-passagedata><tw-passagedata pid="3" name="24/7 Intel" tags="" position="850,1250" size="100,100">24/7 Intel use their tools to look into the situation.
+They add markers to the vehicle.
+Markers:
+* Lost or Stolen 
+* Medium Stop
+* Used in Crime
 
-Vehicle left scene at speed and was tracked by unmarked car until car was diverted to deal with driver injury.
+This will also get the vehicle to set of alerts and monitoring on the ANPR system
+[[Cross County Intel]] 
 
-
-Vehicle registration was YM71HJN.
-
-
-What do you do next?
-[[Ask 24/7 Intel| 24/7 Intel]] 
-[[PNC YM71HJN|PNC YM71HJN]]
-[[RMS YM71HJN | RMS YM71HJN]]
-[[ANPR YM71HJN| ANPR YM71HJN]]
-</tw-passagedata><tw-passagedata pid="2" name=" 24/7 Intel" tags="" position="1000,300" size="100,100"># 24/7 Intel
-
-(if: $ANPRChecked is true)[
-Phone number 07721354837 is often travelling with this vehicle
-Subscriber comes back to Trevor Stephens
-[[PNC Trevor Stephens]]
-[[RMS Trevor Stephens]]
-]
-
-(else:)[
-
-There is insufficient information here; please do some research and come back to us
-
-[[Back to Breifing|Briefing]]
-
-]
-
-
-
-
-
-
-</tw-passagedata><tw-passagedata pid="3" name="PNC YM71HJN" tags="" position="675,475" size="100,100"># PNC YM71HJN
-
-Colin Hastings
-Bristol
-No reports
-
-Clean vehicle
-
-
-
-[[Back to Breifing|Briefing]]
-[[PNC Colin Hastings| PNC Colin Hastings]]
-[[RMS Colin Hastings| RMS Colin Hastings]]</tw-passagedata><tw-passagedata pid="4" name=" ANPR YM71HJN" tags="" position="275,375" size="100,100"># ANPR YM71HJN
+[[Next|R&amp;P Notices]]</tw-passagedata><tw-passagedata pid="4" name="ANPR YM71HJN" tags="" position="1400,800" size="100,100"># ANPR YM71HJN
 
 (set: $ANPRChecked to true)
 
 
 Vehicle last seen:
 
-15/02/23 0020 Trebura way, Southampton
+16/02/23 0020 Tebourba Way, Southampton
+
 15/02/23 2337 Thomas Lewis Way, Southampton
 15/02/23 2205 Avenue, Southampton
 15/02/23 2142 M27, J5
+15/02/23 2058 M4, J20 -&gt; M5(N), J15
 15/02/23 2002 M27, J4
 15/02/23 1934 M27, J1
 
@@ -80,20 +45,85 @@ Vehicle last seen:
 
 What do you notice about the locations?
 
-What do you notice about the pattern of usage in Southampton?
+What do you notice about the pattern of usage in Southampton?</tw-passagedata><tw-passagedata pid="5" name="Area Search" tags="" position="1000,800" size="100,100">The area search yeilds no results</tw-passagedata><tw-passagedata pid="6" name="CCTV Sweep" tags="" position="1200,800" size="100,100">CCTV at the service station shows the dark Corsa reversing to the back of a HGV. Two people in dark clothing and hoodies leave the Corsa and break into the back of the HGV, and start taking a large box from the trailor. They are interupted by a figure who appears in the edge of the frame. One reaches into the boot of the Corsa, and swings a long weapon at the figure - possibly a slender bat, a tyre iron, crowbar, or similar. The figure falls, and the two offenders load a box into the boot of the Corsa before making off.. 
 
-[[Back to Breifing|Briefing]]</tw-passagedata><tw-passagedata pid="5" name=" RMS YM71HJN" tags="" position="450,475" size="100,100"># RMS YM71HJN
+No more useful information can be gained from the grainy CCTV.</tw-passagedata><tw-passagedata pid="7" name="CID Notices" tags="" position="850,1125" size="100,100">The case is passed to CID, who pass details on the vehicle to 24/7 Intel.
 
-No Trace RMS</tw-passagedata><tw-passagedata pid="6" name=" PNC Colin Hastings" tags="" position="600,675" size="100,100"># PNC Colin Hastings
+[[Next|24/7 Intel]]</tw-passagedata><tw-passagedata pid="8" name="Cross County Intel" tags="" position="1025,1300" size="100,100">Part of 24/7 Intel&#39;s advantage is they will be able to communicate with Intelligence teams across the country. From Speaking with Dorset and Wiltshire Police which allows them to see that this may be more of a pattern then the RPU car realised and they have infact interupted an orgamised crime group.</tw-passagedata><tw-passagedata pid="9" name="Deployment" tags="" position="800,425" size="100,100">CWUN: CWUN XRW16
 
-No trace PNC</tw-passagedata><tw-passagedata pid="7" name=" RMS Colin Hastings" tags="" position="775,675" size="100,100"># RMS Colin Hastings
+XRW16: XRW16 Go Ahead
 
-No Trace RMS</tw-passagedata><tw-passagedata pid="8" name="PNC Trevor Stephens" tags="" position="950,425" size="100,100">Conviction
-GBH
-Concerned with Supply
-Offensive Weapons
-</tw-passagedata><tw-passagedata pid="9" name="RMS Trevor Stephens" tags="" position="1125,425" size="100,100">No Trace</tw-passagedata><tw-passagedata pid="10" name="Shift Begins" tags="" position="675,50" size="100,100">You&#39;ve just gone on shift, and assembled in the briefing room
-[[Briefing]]</tw-passagedata></tw-storydata>
+CWUN: This was originally passed to locals, but I think it may be linked to where you&#39;ve just come from. Can we have you make back to the eastbound services at Rownhams, where there are reports of a HGV driver that has suffered serious injury.
+
+XRW16: Yes, show me towards, any further details
+
+CWUN: Four suspects seen to make off in a blue corsa, shortly after the altercation. Call came in from another HGV driver. We belive that this may have been the vehicle you were behind.
+
+[[Return to Rownhams]]</tw-passagedata><tw-passagedata pid="10" name="Golden Hour Completed" tags="" position="850,1000" size="100,100">With inital enquireies completed, XRW16 writes up their report.
+
+[[Next|CID Notices]]</tw-passagedata><tw-passagedata pid="11" name="PNC YM71HJN" tags="" position="600,800" size="100,100"># PNC YM71HJN
+
+&lt;table&gt;
+&lt;thead&gt;
+  &lt;tr&gt;
+    &lt;th colspan=&quot;5&quot;&gt;YM71 HJN&lt;/th&gt;
+  &lt;/tr&gt;
+&lt;/thead&gt;
+&lt;tbody&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Make&lt;/td&gt;
+    &lt;td&gt;Vauxhall&lt;/td&gt;
+    &lt;td&gt;&lt;/td&gt;
+    &lt;td&gt;Named Driver&lt;/td&gt;
+    &lt;td&gt;Colin Hastings&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Model&lt;/td&gt;
+    &lt;td&gt;Corsa&lt;/td&gt;
+    &lt;td&gt;&lt;/td&gt;
+    &lt;td&gt;Keepers Address&lt;/td&gt;
+    &lt;td&gt;23 Sunshine lane, Bristol&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Colour&lt;/td&gt;
+    &lt;td&gt;Black&lt;/td&gt;
+    &lt;td&gt;&lt;/td&gt;
+    &lt;td&gt;Insurance Details&lt;/td&gt;
+    &lt;td&gt;S, D, P + Business&lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/tbody&gt;
+&lt;/table&gt;
+
+[[PNC Colin Hastings| PNC Colin Hastings]]
+[[RMS Colin Hastings| RMS Colin Hastings]]</tw-passagedata><tw-passagedata pid="12" name="Pursuit" tags="" position="800,175" size="100,100">Vehicle continues to speed up, shoing no indication of stopping. It moves out to lane 4 of the motorway and then, at the last minute, cuts across to take the exit at J4 to the M3 Northbound.
+
+Vehicle comes very close to hitting another vehicle in lane 3, RM16 determines that it is going to be high risk and updates the control room accordingly, particuarly as the pursuit is heading into an area of roadworks.
+
+[[Risk]]</tw-passagedata><tw-passagedata pid="13" name="R&amp;P Notices" tags="" position="850,1375" size="100,100">ZW74 is monitoring ANPR hits, and notices the vehicle has hit nearby.
+They run it through PNC and RMS, and they are passed details about crimes and markers.
+
+
+They set off in pursuit of the vehicle, which veers into a car park, which happens to be the car park of Redbridge Police station....</tw-passagedata><tw-passagedata pid="14" name="RMS YM71HJN" tags="" position="800,800" size="100,100"># RMS YM71HJN
+
+No Trace RMS</tw-passagedata><tw-passagedata pid="15" name="Return to Rownhams" tags="" position="850,625" size="100,100">XRW16 returns to Rownhams, and finds R&amp;P dealing with the initial response to the incident.
+
+[[PNC YM71HJN]]
+[[RMS YM71HJN]]
+[[ANPR YM71HJN]] 
+[[Area Search]]
+[[CCTV Sweep]]
+
+[[Golden Hour Completed]]</tw-passagedata><tw-passagedata pid="16" name="Risk" tags="" position="800,300" size="100,100">Pursuit continues up the M3, showing no sign of slowing down or consideration to the staff on the roadworks. XRW16 makes the decision to stand down the pursuit due to level of risk.
+
+Having stood down, XRW16 gets a call over the radio.
+[[Deployment]]</tw-passagedata><tw-passagedata pid="17" name="Shift Begins" tags="" position="675,50" size="100,100">Night Shifft 22:00 - 07:00 Wednesday 15th Feburary 2023
+
+01:30 16/02/23
+XRW16, single crewed, is on the exit slip on the eastbound carriageway of the M27 at Rownhams Service Station.
+
+A dark Corsa drives through the carpark at approximately 40mph, swerving recklessly. XRW16 sets off in pursuit, calling up to CWUN and the FIM authorises pursuit.
+
+[[Pursuit]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
